--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fffontas</title>
 
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=Mttdk8FO5HMuXSNefNKMqTWZRVPhkSaimgK1Q0mZSBMgYT6lJzHkg8jBty9w4rgZdx9hgd4HvKiEsR149tOh9qYyadKXFIEcbhluSKA8UtjV8m_4-bXiqySLcbJyJbisbJo1HOnVCBkidWsGxmqYqA" charset="UTF-8"></script><style>
+    <style>
         #controls {
-            margin-top: 10px;
+            margin-top: 1em;
         }
     </style>
 
